packages/svelte/tests/compiler-errors/samples/runes-no-const-assignment/main.js
const a = $state(0);
a += 1;
